# rust-spa-server

./: Cargo.toml  LICENSE  README.md
src/: main.rs
