[package]
name = "spa-server"
version = "0.1.0"
authors = ["Michael J. Ryan <tracker1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
env_logger = "0.6"

actix-web = "2"
actix-files = "0.2"
actix-rt = "1"