[package]
name = "spa-server"
version = "0.1.0"
authors = ["Michael J. Ryan <tracker1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
url = "2.1.1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"
futures = "0.3.1"
futures-fs = "0.0.5"
pretty_env_logger = "0.4"
mime_guess = "2.0.3"
bytes = "0.5.4"
chrono = "0.4.11"
